# FTP2

./: .gitignore  CMakeLists.txt  Client  Makefile  README.md  Readme.md  Serveur  ftpclient.cpp  ftpclient.h  ftpclient.ui  lpfftpmodel.cpp  lpfftpmodel.h  main.cpp  serverauthdialog.cpp  serverauthdialog.h
FTP/include/: client_actions.hpp
FTP/src/: client.cpp  client_actions.cpp  server.cpp
include/: client_actions.hpp  commands.hpp  file_utils.hpp  logger.hpp  server_actions.hpp
include/LPTF_Net/: LPTF_Packet.hpp  LPTF_Socket.hpp  LPTF_Structs.hpp  LPTF_Utils.hpp
src/: client.cpp  client_actions.cpp  commands.cpp  file_transfer.cpp  file_utils.cpp  logger.cpp  server.cpp  server_actions.cpp  test.cpp
src/LPTF_Net/: LPTF_Packet.cpp  LPTF_Socket.cpp  LPTF_Utils.cpp
