cmake_minimum_required(VERSION 3.16)

project(FTP-QT VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)

set(PROJECT_SOURCES
        main.cpp
        ftpclient.cpp
        ftpclient.h

)

if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    qt_add_executable(FTP-QT
        MANUAL_FINALIZATION
        ${PROJECT_SOURCES}
        lpfftpmodel.h lpfftpmodel.cpp
        FTP/src/client_actions.cpp  FTP/src/file_utils.cpp
        FTP/include/LPTF_Net/LPTF_Packet.hpp FTP/include/LPTF_Net/LPTF_Socket.hpp FTP/include/LPTF_Net/LPTF_Structs.hpp FTP/include/LPTF_Net/LPTF_Utils.hpp FTP/include/client_actions.hpp FTP/include/file_utils.hpp   FTP/src/LPTF_Net/LPTF_Packet.cpp FTP/src/LPTF_Net/LPTF_Socket.cpp FTP/src/LPTF_Net/LPTF_Utils.cpp  FTP/src/client_actions.cpp FTP/src/file_utils.cpp
        serverauthdialog.h serverauthdialog.cpp

    )
# Define target properties for Android with Qt 6 as:
#    set_property(TARGET FTP-QT APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
else()
    if(ANDROID)
        add_library(FTP-QT SHARED
            ${PROJECT_SOURCES}
        )
# Define properties for Android with Qt 5 after find_package() calls as:
#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
    else()
        add_executable(FTP-QT
            ${PROJECT_SOURCES}
        )
    endif()
endif()

target_link_libraries(FTP-QT PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
if(${QT_VERSION} VERSION_LESS 6.1.0)
  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.FTP-QT)
endif()
set_target_properties(FTP-QT PROPERTIES
    ${BUNDLE_ID_OPTION}
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

include(GNUInstallDirs)
install(TARGETS FTP-QT
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

if(QT_VERSION_MAJOR EQUAL 6)
    qt_finalize_executable(FTP-QT)
endif()
